--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -19,8 +19,10 @@
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Inter, Playfair Display;
+h1, h2, h3 {
+  font-family: 'Playfair Display', serif;
+}
+
+body, p, button, a{
+  font-family: 'Poppins', sans-serif;
 }
